@@ -1,3 +1,8 @@
+1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* MessageProbe.m (dynamicCallOn): Use JFINDJAVA instead of
+	respondsTo: + JavaProxy check.
+
 1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* MessageProbe.m: Remove support for avcall; use FArguments/FCall
